alpm-types/src/version/snapshots/pkg_generic::parse_error_in_version_from_string@case_3_no_version.snap
---
source: alpm-types/src/version/pkg_generic.rs
---
error: invalid character
 | 
 | 
 | ^ expected an ASCII character, except for ':', '/', '-', '<', '>', '=', or any whitespace characters
 | 
 = while parsing:
   alpm-pkgver: ()
   → invalid character
   → expected an ASCII character, except for ':', '/', '-', '<', '>', '=', or any whitespace characters
